CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH "${GLOBAL_ROOT}/CMake" ${CMAKE_MODULE_PATH})

PROJECT(Tests)

INCLUDE_DIRECTORIES("./include")
ADD_DEFINITIONS(-g)

FILE(GLOB sources "tests/*.cpp")
FOREACH(source ${sources})
  GET_FILENAME_COMPONENT(ExeName ${source} NAME_WE)
  ADD_EXECUTABLE(${ExeName} ${source})

  MESSAGE("Auto loading unit test ${ExeName}")
  TARGET_LINK_LIBRARIES(${ExeName} gtest gtest_main)
  IF(UNIX)
    TARGET_LINK_LIBRARIES(${ExeName} pthread)
  ENDIF(UNIX)
ENDFOREACH()

SET(EXECUTABLE_OUTPUT_PATH ${GLOBAL_OUTPUT_PATH})
SET(LIBRARY_OUTPUT_PATH ${GLOBAL_OUTPUT_PATH})
